--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html">Servicios</a>
-      <a href="indicadores.html">Indicadores</a>
+      <a href="Indicadores.html">Indicadores</a>
       <a href="inpc.html">INPC</a>
       <a href="enlaces.html">Sitios de Interés</a>
       <a href="blog.html">Blog</a>
@@ -511,3 +511,4 @@
 
 </body>
 </html>
+
