Fix HTML encoding issues in Blog.html

--- a/Blog.html
+++ b/Blog.html
@@ -106,7 +106,7 @@
     <button id="hamburger" class="hamburger" aria-label="Abrir menú">Menú</button>
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html">Servicios</a>
-      <a href="indicadores.html" aria-current="page">Indicadores</a>
+      <a href="Indicadores.html" aria-current="page">Indicadores</a>
       <a href="inpc.html">INPC</a>
       <a href="enlaces.html">Sitios de Interés</a>
       <a href="Blog.html">Blog</a>
@@ -184,4 +184,5 @@
   });
 </script>
 </body>
+
 </html>
