Fix HTML encoding issues in inpc.html

--- a/inpc.html
+++ b/inpc.html
@@ -24,7 +24,7 @@
 
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html">Servicios</a>
-      <a href="indicadores.html" aria-current="page">Indicadores</a>
+      <a href="Indicadores.html" aria-current="page">Indicadores</a>
       <a href="inpc.html">INPC</a>
       <a href="enlaces.html">Sitios de Interés</a>
       <a href="Blog.html">Blog</a>
@@ -151,3 +151,4 @@
 </script>
 </body>
 </html>
+
