--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 <main class="hero" id="top">
   <video class="hero-video" autoplay muted loop playsinline preload="metadata">
-    <source src="Abstract_Corporate_Background_Video_Generation.MP4" type="video/mp4">
+    <source src="Abstract_Corporate_Background_Video_Generation.mp4" type="video/mp4">
     Tu navegador no soporta video HTML5.
   </video>
 
@@ -511,4 +511,5 @@
 
 </body>
 </html>
+
 
