Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <a href="Indicadores.html">Indicadores</a>
       <a href="inpc.html">INPC</a>
       <a href="enlaces.html">Sitios de Interés</a>
-      <a href="blog.html">Blog</a>
+      <a href="Blog.html">Blog</a>
       <a href="nosotros.html">Quiénes somos</a>
       <a href="contacto.html" class="btn-nav">Contacto</a>
     </nav>
@@ -359,7 +359,7 @@
         <div class="card-icon">📊</div>
         <h3>Indicadores</h3>
         <p>UMA, salarios mínimos, recargos y enlaces a fuentes oficiales.</p>
-        <a class="btn-primary" href="indicadores.html" style="margin-top:12px;">Abrir Indicadores</a>
+        <a class="btn-primary" href="Indicadores.html" style="margin-top:12px;">Abrir Indicadores</a>
       </div>
 
       <div class="card" style="background:#fff; border:1px solid var(--gray-line);">
@@ -417,26 +417,26 @@
 
     <div class="grid">
       <div class="article-card" style="grid-column: span 4;">
-        <a href="blog.html">CFDI 4.0: errores comunes y cómo evitarlos</a>
+        <a href="Blog.html">CFDI 4.0: errores comunes y cómo evitarlos</a>
         <div class="meta">Guía práctica • 5 min</div>
         <p style="margin:10px 0 0; color:var(--gray-muted);">Checklist para reducir rechazos y diferencias en conciliación.</p>
       </div>
 
       <div class="article-card" style="grid-column: span 4;">
-        <a href="blog.html">INPC y actualización de contribuciones: cómo se calcula</a>
+        <a href="Blog.html">INPC y actualización de contribuciones: cómo se calcula</a>
         <div class="meta">Explicación • 6 min</div>
         <p style="margin:10px 0 0; color:var(--gray-muted);">Qué considerar al usar índices y por qué importa la fecha de DOF.</p>
       </div>
 
       <div class="article-card" style="grid-column: span 4;">
-        <a href="blog.html">Recargos y multas: diferencias y cuándo aplican</a>
+        <a href="Blog.html">Recargos y multas: diferencias y cuándo aplican</a>
         <div class="meta">Resumen • 4 min</div>
         <p style="margin:10px 0 0; color:var(--gray-muted);">Lo básico para entender costos por incumplimiento y prórrogas.</p>
       </div>
     </div>
 
     <div style="margin-top:18px;">
-      <a class="btn-primary" href="blog.html">Ver Blog</a>
+      <a class="btn-primary" href="Blog.html">Ver Blog</a>
     </div>
   </div>
 </section>
@@ -511,5 +511,6 @@
 
 </body>
 </html>
+
 
 
