--- a/servicios.html
+++ b/servicios.html
@@ -241,8 +241,12 @@
       margin-right: auto;
     }
 
+    /* ✅ Botones: centrado vertical perfecto */
     .btn {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: .5rem;
       padding: 1rem 2rem;
       font-weight: 600;
       text-decoration: none;
@@ -251,6 +255,10 @@
       font-size: 0.95rem;
       letter-spacing: 0.02em;
       border: 2px solid transparent;
+      line-height: 1;
+      min-height: 50px;
+      box-sizing: border-box;
+      white-space: nowrap;
     }
 
     .btn-primary {
@@ -365,6 +373,7 @@
 
     <button id="hamburger" class="hamburger" aria-label="Menú">Menú</button>
 
+    <!-- ✅ Respeta tus rutas existentes -->
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html" aria-current="page">Servicios</a>
       <a href="Indicadores.html">Indicadores</a>
@@ -576,7 +585,6 @@
   </div>
 </section>
 
-<!-- CTA -->
 <section class="services-cta">
   <div class="container">
     <h2>¿Necesita asesoría especializada?</h2>
@@ -647,5 +655,6 @@
 
 </body>
 </html>
+
 
 
