--- a/inpc.html
+++ b/inpc.html
@@ -4,58 +4,478 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>INPC | GG Contabilidad y Defensa Fiscal</title>
-  <meta name="description" content="Tablas del INPC 2024 y 2025 con fecha de publicación en el DOF. Actualización manual mensual." />
+  <meta name="description" content="Índice Nacional de Precios al Consumidor actualizado. Consulta oficial para cálculos de actualización fiscal." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/styles.css">
+
+  <style>
+    :root {
+      --navy-deep: #0F2A44;
+      --navy-mid: #1A3A5C;
+      --gold-accent: #C9A961;
+      --gray-sophisticated: #556B7E;
+      --gray-light: #F7F9FB;
+      --border-subtle: #E1E8ED;
+    }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      color: var(--navy-deep);
+      line-height: 1.6;
+      background: #fff;
+    }
+
+    .header {
+      background: rgba(255, 255, 255, 0.98);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border-subtle);
+      padding: 1.2rem 0;
+    }
+
+    /* Hero de página */
+    .page-hero {
+      background: linear-gradient(135deg, #0F2A44 0%, #1A3A5C 100%);
+      color: #fff;
+      padding: 4rem 0 3rem;
+      text-align: center;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .page-hero h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: clamp(1.8rem, 5vw, 2.5rem);
+      font-weight: 700;
+      margin: 0 0 1rem;
+      letter-spacing: -0.02em;
+    }
+
+    .page-hero-subtitle {
+      font-size: 1.1rem;
+      opacity: 0.92;
+      max-width: 680px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+
+    /* Breadcrumb */
+    .breadcrumb {
+      padding: 1.5rem 0;
+      background: var(--gray-light);
+      border-bottom: 1px solid var(--border-subtle);
+    }
+
+    .breadcrumb-nav {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      font-size: 0.9rem;
+      color: var(--gray-sophisticated);
+      flex-wrap: wrap;
+    }
+
+    .breadcrumb-nav a {
+      color: var(--navy-deep);
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+
+    .breadcrumb-nav a:hover {
+      color: var(--gold-accent);
+    }
+
+    /* Contenido principal */
+    .inpc-section {
+      padding: 4rem 0;
+    }
+
+    .inpc-intro {
+      max-width: 800px;
+      margin: 0 auto 3rem;
+      background: var(--gray-light);
+      padding: 2rem;
+      border-left: 4px solid var(--gold-accent);
+      border-radius: 2px;
+    }
+
+    .inpc-intro h2 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: var(--navy-deep);
+      margin: 0 0 0.75rem;
+    }
+
+    .inpc-intro p {
+      color: var(--gray-sophisticated);
+      margin: 0;
+      line-height: 1.7;
+    }
+
+    /* Tabs profesionales */
+    .year-tabs {
+      display: flex;
+      gap: 0.5rem;
+      max-width: 900px;
+      margin: 0 auto 2rem;
+      border-bottom: 2px solid var(--border-subtle);
+    }
+
+    .year-tab {
+      background: transparent;
+      border: none;
+      padding: 1rem 2rem;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--gray-sophisticated);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      position: relative;
+      border-bottom: 3px solid transparent;
+      margin-bottom: -2px;
+    }
+
+    .year-tab:hover {
+      color: var(--navy-deep);
+      background: rgba(15,42,68,0.03);
+    }
+
+    .year-tab.active {
+      color: var(--navy-deep);
+      border-bottom-color: var(--gold-accent);
+    }
+
+    /* Paneles */
+    .inpc-panel {
+      display: none;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .inpc-panel.active {
+      display: block;
+      animation: fadeIn 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .panel-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1.5rem;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid var(--border-subtle);
+      gap: 1rem;
+    }
+
+    .panel-title {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: var(--navy-deep);
+      margin: 0;
+    }
+
+    .update-badge {
+      font-size: 0.85rem;
+      color: var(--gold-accent);
+      background: rgba(201,169,97,0.12);
+      padding: 0.4rem 0.9rem;
+      border-radius: 20px;
+      font-weight: 600;
+      white-space: nowrap;
+    }
+
+    /* Tabla profesional */
+    .table-container {
+      background: #fff;
+      border: 1px solid var(--border-subtle);
+      border-radius: 2px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(15,42,68,0.06);
+    }
+
+    .inpc-table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .inpc-table thead {
+      background: var(--navy-deep);
+      color: #fff;
+    }
+
+    .inpc-table thead th {
+      padding: 1rem;
+      text-align: left;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 0.9rem;
+      font-weight: 600;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+    }
+
+    .inpc-table tbody tr {
+      border-bottom: 1px solid var(--border-subtle);
+      transition: background 0.2s ease;
+    }
+
+    .inpc-table tbody tr:hover {
+      background: var(--gray-light);
+    }
+
+    .inpc-table tbody tr:last-child {
+      border-bottom: none;
+    }
+
+    .inpc-table td {
+      padding: 1rem;
+      color: var(--navy-deep);
+    }
+
+    .inpc-table td:first-child {
+      font-weight: 600;
+      color: var(--navy-mid);
+    }
+
+    .inpc-table td:nth-child(2) {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      color: var(--gold-accent);
+    }
+
+    .inpc-table td:last-child {
+      color: var(--gray-sophisticated);
+      font-size: 0.95rem;
+    }
+
+    /* Nota informativa */
+    .inpc-note {
+      max-width: 900px;
+      margin: 1.5rem auto 0;
+      padding: 1rem 1.25rem;
+      background: rgba(201,169,97,0.08);
+      border-left: 3px solid var(--gold-accent);
+      color: var(--gray-sophisticated);
+      font-size: 0.95rem;
+      line-height: 1.6;
+    }
+
+    .inpc-note strong {
+      color: var(--navy-deep);
+      font-weight: 600;
+    }
+
+    /* Información adicional */
+    .info-box {
+      max-width: 900px;
+      margin: 3rem auto 0;
+      background: var(--gray-light);
+      padding: 2rem;
+      border-radius: 2px;
+      border: 1px solid var(--border-subtle);
+    }
+
+    .info-box h3 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: var(--navy-deep);
+      margin: 0 0 1rem;
+    }
+
+    .info-box ul {
+      margin: 0;
+      padding-left: 1.5rem;
+      color: var(--gray-sophisticated);
+    }
+
+    .info-box li {
+      margin-bottom: 0.5rem;
+      line-height: 1.6;
+    }
+
+    /* Footer */
+    .footer {
+      background: var(--navy-deep);
+      color: rgba(255,255,255,0.8);
+      padding: 3rem 0 2rem;
+      border-top: 1px solid rgba(255,255,255,0.1);
+      margin-top: 4rem;
+    }
+
+    .footer-content {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 0 1.5rem 2rem;
+    }
+
+    .footer-section h4 {
+      color: #fff;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1rem;
+      font-weight: 600;
+      margin: 0 0 1rem;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+    .footer-links {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .footer-links li {
+      margin-bottom: 0.5rem;
+    }
+
+    .footer-links a {
+      color: rgba(255,255,255,0.7);
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+
+    .footer-links a:hover {
+      color: var(--gold-accent);
+    }
+
+    .footer-bottom {
+      border-top: 1px solid rgba(255,255,255,0.1);
+      padding: 1.5rem 1.5rem 0;
+      text-align: center;
+      font-size: 0.9rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .page-hero {
+        padding: 3rem 0 2rem;
+      }
+
+      .inpc-section {
+        padding: 2.5rem 0;
+      }
+
+      .year-tabs {
+        flex-direction: column;
+        border-bottom: none;
+      }
+
+      .year-tab {
+        border-bottom: 1px solid var(--border-subtle);
+        padding: 0.85rem 1rem;
+        text-align: left;
+      }
+
+      .year-tab.active {
+        border-left: 3px solid var(--gold-accent);
+        border-bottom-color: var(--border-subtle);
+        background: var(--gray-light);
+      }
+
+      .panel-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.75rem;
+      }
+
+      .table-container {
+        overflow-x: auto;
+      }
+
+      .inpc-table {
+        min-width: 600px;
+      }
+
+      .inpc-table thead th,
+      .inpc-table td {
+        padding: 0.75rem;
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
+
 <header class="header">
   <div class="container header-inner">
     <a href="index.html" class="logo" aria-label="Inicio">
-      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal">
+      <img src="Logo.jpeg" alt="GG Contabilidad y Defensa Fiscal" style="height: 48px;">
     </a>
 
-    <button id="hamburger" class="hamburger" aria-label="Abrir menú">Menú</button>
+    <button id="hamburger" class="hamburger" aria-label="Menú">Menú</button>
 
+    <!-- ✅ Respeta tus rutas existentes -->
     <nav id="nav" class="nav" aria-label="Navegación principal">
       <a href="servicios.html">Servicios</a>
-      <a href="Indicadores.html" aria-current="page">Indicadores</a>
-      <a href="inpc.html">INPC</a>
-      <a href="enlaces.html">Sitios de Interés</a>
+      <a href="Indicadores.html">Indicadores</a>
+      <a href="inpc.html" aria-current="page">INPC</a>
+      <a href="enlaces.html">Recursos</a>
       <a href="Blog.html">Blog</a>
-      <a href="nosotros.html">Quiénes somos</a>
+      <a href="nosotros.html">Nosotros</a>
       <a href="contacto.html" class="btn-nav">Contacto</a>
     </nav>
   </div>
 </header>
 
-<section class="section page-top inpc-wrap">
+<section class="page-hero">
   <div class="container">
-    <h1 class="section-title">Índice Nacional de Precios al Consumidor (INPC)</h1>
-    <p class="section-subtitle">
-      Tablas informativas actualizadas manualmente con base en la fecha de publicación en el DOF.
-    </p>
+    <h1>Índice Nacional de Precios al Consumidor</h1>
+    <p class="page-hero-subtitle">Consulta oficial de INPC por periodo, actualizada mensualmente con base en publicaciones del Diario Oficial de la Federación.</p>
+  </div>
+</section>
 
-    <div class="year-tabs" role="tablist" aria-label="Años INPC">
-      <button class="year-tab active" type="button" data-target="panel-2025" role="tab" aria-selected="true">2025</button>
-      <button class="year-tab" type="button" data-target="panel-2024" role="tab" aria-selected="false">2024</button>
+<div class="breadcrumb">
+  <div class="container">
+    <nav class="breadcrumb-nav" aria-label="Breadcrumb">
+      <a href="index.html">Inicio</a>
+      <span>/</span>
+      <a href="Indicadores.html">Indicadores</a>
+      <span>/</span>
+      <span>INPC</span>
+    </nav>
+  </div>
+</div>
+
+<section class="inpc-section">
+  <div class="container">
+    <div class="inpc-intro">
+      <h2>¿Qué es el INPC y para qué se utiliza?</h2>
+      <p>El Índice Nacional de Precios al Consumidor es el indicador oficial para medir la inflación en México. Se utiliza para actualizar contribuciones, multas, créditos fiscales y otras obligaciones conforme al Código Fiscal de la Federación. Los valores se publican mensualmente en el DOF.</p>
     </div>
 
-    <!-- 2025 -->
-    <div id="panel-2025" class="inpc-panel active" role="tabpanel">
-      <h3 class="inpc-title">INPC 2025</h3>
-      <div class="table-box">
-        <table class="inpc">
+    <div class="year-tabs" role="tablist" aria-label="Selección de año INPC">
+      <button id="tab-2025" class="year-tab active" type="button" data-target="panel-2025" role="tab" aria-selected="true" aria-controls="panel-2025">Año 2025</button>
+      <button id="tab-2024" class="year-tab" type="button" data-target="panel-2024" role="tab" aria-selected="false" aria-controls="panel-2024">Año 2024</button>
+    </div>
+
+    <!-- Panel 2025 -->
+    <div id="panel-2025" class="inpc-panel active" role="tabpanel" aria-labelledby="tab-2025">
+      <div class="panel-header">
+        <h3 class="panel-title">Valores INPC 2025</h3>
+        <span class="update-badge">Actualización mensual</span>
+      </div>
+
+      <div class="table-container">
+        <table class="inpc-table">
           <thead>
             <tr>
-              <th>Mes</th>
-              <th>Índices (INPC)</th>
-              <th>Fecha de publicación en el DOF</th>
+              <th>Periodo</th>
+              <th>INPC</th>
+              <th>Fecha de publicación DOF</th>
             </tr>
           </thead>
           <tbody>
@@ -63,36 +483,43 @@
             <tr><td>Octubre</td><td>141.708</td><td>10 de noviembre de 2025</td></tr>
             <tr><td>Septiembre</td><td>141.197</td><td>10 de octubre de 2025</td></tr>
             <tr><td>Agosto</td><td>140.867</td><td>10 de septiembre de 2025</td></tr>
-            <tr><td>Julio</td><td>140.78</td><td>08 de agosto de 2025</td></tr>
+            <tr><td>Julio</td><td>140.780</td><td>08 de agosto de 2025</td></tr>
             <tr><td>Junio</td><td>140.405</td><td>10 de julio de 2025</td></tr>
             <tr><td>Mayo</td><td>140.012</td><td>10 de junio de 2025</td></tr>
-            <tr><td>Abril</td><td>139.62</td><td>09 de mayo de 2025</td></tr>
+            <tr><td>Abril</td><td>139.620</td><td>09 de mayo de 2025</td></tr>
             <tr><td>Marzo</td><td>139.161</td><td>10 de abril de 2025</td></tr>
             <tr><td>Febrero</td><td>138.726</td><td>10 de marzo de 2025</td></tr>
             <tr><td>Enero</td><td>138.343</td><td>10 de febrero de 2025</td></tr>
           </tbody>
         </table>
       </div>
-      <p class="inpc-note">Tip: cada mes agrega el renglón nuevo arriba (mes más reciente).</p>
+
+      <p class="inpc-note">
+        <strong>Nota de actualización:</strong> Los valores se incorporan mensualmente conforme a la publicación oficial en el DOF. El periodo más reciente aparece en la primera fila de la tabla.
+      </p>
     </div>
 
-    <!-- 2024 -->
-    <div id="panel-2024" class="inpc-panel" role="tabpanel">
-      <h3 class="inpc-title">INPC 2024</h3>
-      <div class="table-box">
-        <table class="inpc">
+    <!-- Panel 2024 -->
+    <div id="panel-2024" class="inpc-panel" role="tabpanel" aria-labelledby="tab-2024">
+      <div class="panel-header">
+        <h3 class="panel-title">Valores INPC 2024</h3>
+        <span class="update-badge">Año completo</span>
+      </div>
+
+      <div class="table-container">
+        <table class="inpc-table">
           <thead>
             <tr>
-              <th>Mes</th>
-              <th>Índices (INPC)</th>
-              <th>Fecha de publicación en el DOF</th>
+              <th>Periodo</th>
+              <th>INPC</th>
+              <th>Fecha de publicación DOF</th>
             </tr>
           </thead>
           <tbody>
             <tr><td>Diciembre</td><td>137.949</td><td>10 de enero de 2025</td></tr>
             <tr><td>Noviembre</td><td>137.424</td><td>10 de diciembre de 2024</td></tr>
             <tr><td>Octubre</td><td>136.828</td><td>08 de noviembre de 2024</td></tr>
-            <tr><td>Septiembre</td><td>136.08</td><td>10 de octubre de 2024</td></tr>
+            <tr><td>Septiembre</td><td>136.080</td><td>10 de octubre de 2024</td></tr>
             <tr><td>Agosto</td><td>136.013</td><td>10 de septiembre de 2024</td></tr>
             <tr><td>Julio</td><td>136.003</td><td>09 de agosto de 2024</td></tr>
             <tr><td>Junio</td><td>134.594</td><td>10 de julio de 2024</td></tr>
@@ -104,15 +531,65 @@
           </tbody>
         </table>
       </div>
-      <p class="inpc-note">Tip: si hay corrección, edita el valor del mes y la fecha DOF.</p>
+
+      <p class="inpc-note">
+        <strong>Nota de actualización:</strong> En caso de correcciones oficiales publicadas en el DOF, se actualizan tanto el valor del INPC como la fecha de publicación correspondiente.
+      </p>
+    </div>
+
+    <div class="info-box">
+      <h3>Consideraciones técnicas</h3>
+      <ul>
+        <li>Los valores se actualizan el día 10 de cada mes, o el día hábil inmediato siguiente.</li>
+        <li>Para cálculos de actualización fiscal, debe utilizarse el INPC del mes en que debió pagarse la contribución y el del mes en que se efectúa el pago.</li>
+        <li>La fuente oficial es el Diario Oficial de la Federación (DOF), publicado por el Instituto Nacional de Estadística y Geografía (INEGI).</li>
+        <li>Esta tabla es de carácter informativo. Para efectos legales, consulte las publicaciones oficiales en el DOF.</li>
+      </ul>
     </div>
   </div>
 </section>
 
 <footer class="footer">
   <div class="container">
-    <strong>GG Contabilidad y Defensa Fiscal</strong>
-    <p style="margin: 10px 0 0;">© 2025. Todos los derechos reservados.</p>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h4>GG Contabilidad</h4>
+        <p style="margin:0; line-height:1.6;">Despacho especializado en asesoría contable, fiscal y defensa ante autoridades.</p>
+      </div>
+
+      <div class="footer-section">
+        <h4>Servicios</h4>
+        <ul class="footer-links">
+          <li><a href="servicios.html">Contabilidad</a></li>
+          <li><a href="servicios.html">Cumplimiento fiscal</a></li>
+          <li><a href="servicios.html">Defensa fiscal</a></li>
+          <li><a href="servicios.html">Comercio exterior</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h4>Recursos</h4>
+        <ul class="footer-links">
+          <li><a href="Indicadores.html">Indicadores</a></li>
+          <li><a href="inpc.html">INPC</a></li>
+          <li><a href="enlaces.html">Sitios oficiales</a></li>
+          <li><a href="Blog.html">Blog técnico</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h4>Contacto</h4>
+        <ul class="footer-links">
+          <li><a href="contacto.html">Formulario</a></li>
+          <li><a href="nosotros.html">Acerca de nosotros</a></li>
+          <li><a href="https://wa.me/525513110556" target="_blank" rel="noopener">WhatsApp</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p style="margin:0;">© 2025 GG Contabilidad y Defensa Fiscal. Todos los derechos reservados.</p>
+    </div>
   </div>
 </footer>
 
@@ -128,7 +605,7 @@
     a.addEventListener("click", () => nav.classList.remove("mobile-open"));
   });
 
-  // Tabs INPC
+  // Tabs INPC (accesible + estable)
   const tabButtons = document.querySelectorAll(".year-tab");
   const panels = document.querySelectorAll(".inpc-panel");
 
@@ -149,6 +626,8 @@
     });
   });
 </script>
+
 </body>
 </html>
+
 
